# Sermon_prep

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  sermon_history.json
backend/: app_logger.py  bible_indexer.py  main.py  requirements.txt  test_sermon_api.py
data/: sermon_history.json
frontend/: .gitkeep  app.py
