[tool.poetry]
name = "ark-ai"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.0"
pymupdf = "^1.26.0"
pyreadline3 = "^3.5.4"
requests = "^2.31.0"
pypdf2 = "^3.0.1"
protobuf = "^6.31.1"
grpcio = "^1.71.0"
googleapis-common-protos = "^1.70.0"
pandas = "^2.2.3"
logging = "^0.4.9.6"
fastapi = "^0.115.12"
python-logging-loki = "^0.3.1"
uvicorn = "^0.34.3"
tiktoken = "^0.9.0"
streamlit = "^1.30.0"
fpdf2 = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
